# fastapi-snippets

./: Makefile  README.md  database.py  main.py  pyproject.toml  schemas.py  small_snippets.py
