[tool.poetry]
name = "fastapi-snippets"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standerd"], version = "^0.19.0"}
SQLAlchemy = "^1.4.42"
aiosqlite = "^0.17.0"
greenlet = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
